# plotting_sandbox

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: pr2_pancake_flip_action_end.yaml  pr2_pancake_flip_action_start.yaml  pr2_pancake_flip_motion_end.yaml  pr2_pancake_flip_motion_start.yaml  pr2_pancake_flip_start_action.yaml  pr2_pancake_flip_start_motion.yaml  standard.rviz
launch/: pr2_sim.launch  pub_world.launch
rosinstall/: kinetic.rosinstall
scripts/: plotting_world.py
