<?xml version="1.0"?>
<package format="2">
  <name>plotting_sandbox</name>
  <version>0.0.1</version>
  <description>A sandbox for plotting scripts for papers, projects, etc.</description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>iai_cad_downloader</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>pr2_description</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>iai_kitchen</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

</package>
